--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@mui/material": "^5.15.3",
     "@mui/styles": "^5.15.3",
     "@mui/x-data-grid": "^6.18.7",
+    "@reduxjs/toolkit": "^2.0.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -17,7 +18,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^5.0.1",
-    "react-redux": "^9.1.0",
+    "react-redux": "^7.1.1",
     "react-router-dom": "^6.21.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
